<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grid_layout"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    app:alignmentMode="alignBounds"
    app:rowCount="3"
    app:columnCount="3"
    tools:context="com.nimbledroid.memoryleaks.MainActivity">
    <Button
        android:text="@string/async_task"
        android:contentDescription="@string/async_task"
        android:id="@+id/at_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill"/>
    <Button
        android:text="@string/static_activity"
        android:contentDescription="@string/static_activity"
        android:id="@+id/sa_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill"/>
    <Button
        android:text="@string/handler"
        android:contentDescription="@string/handler"
        android:id="@+id/h_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill"/>
    <Button
        android:text="@string/inner_class"
        android:contentDescription="@string/inner_class"
        android:id="@+id/ic_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill"/>
    <Button
        android:text="@string/static_view"
        android:contentDescription="@string/static_view"
        android:id="@+id/sv_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_column="2"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill"/>
    <Button
        android:text="@string/sensor_manager"
        android:contentDescription="@string/sensor_manager"
        android:id="@+id/sm_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill"/>
    <Button
        android:text="@string/thread"
        android:contentDescription="@string/thread"
        android:id="@+id/t_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill"/>
    <Button
        android:text="@string/timer_task"
        android:contentDescription="@string/timer_task"
        android:id="@+id/tt_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        app:layout_gravity="fill"/>
</android.support.v7.widget.GridLayout>
